# wtfile

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  text_gen.rs
