[package]
name = "wtfile"
authors = ["Andrew McHarg <amcharg@gmail.com>"]
version = "0.1.0"
edition = "2024"
description = "A command line tool that uses llms to get information about a file on disk."

license = "MIT"
repository = "https://github.com/robo-corg/wtfile"

rust-version = "1.85"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
confy = "0.6.1"
eyre = "0.6.12"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
tracing = "0.1.41"

[profile.release]
lto = true
codegen-units = 1
